usecases/blea-guest-fsxn-data-analytics-sample/doc/verification-results/10-security-groups.json
{
    "SecurityGroups": [
        {
            "GroupId": "sg-0556cc40bb91ad2bd",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "Allow all outbound traffic by default",
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "Tags": [
                {
                    "Key": "aws:cloudformation:stack-name",
                    "Value": "Dev-BLEAFsxnDataAnalytics"
                },
                {
                    "Key": "Repository",
                    "Value": "aws-samples/baseline-environment-on-aws"
                },
                {
                    "Key": "aws:cloudformation:logical-id",
                    "Value": "NetworkingVpcGlueEndpointSecurityGroup15E9777B"
                },
                {
                    "Key": "Name",
                    "Value": "Dev-BLEAFsxnDataAnalytics/Networking/Vpc"
                },
                {
                    "Key": "aws:cloudformation:stack-id",
                    "Value": "arn:aws:cloudformation:ap-northeast-1:178625946981:stack/Dev-BLEAFsxnDataAnalytics/7cd9ba00-5f42-11f1-a545-0626e09db33f"
                },
                {
                    "Key": "Environment",
                    "Value": "Development"
                }
            ],
            "VpcId": "vpc-0809f5832b8d335e5",
            "SecurityGroupArn": "arn:aws:ec2:ap-northeast-1:178625946981:security-group/sg-0556cc40bb91ad2bd",
            "OwnerId": "178625946981",
            "GroupName": "Dev-BLEAFsxnDataAnalytics-NetworkingVpcGlueEndpointSecurityGroup15E9777B-UKLr3bzrKNi3",
            "Description": "Dev-BLEAFsxnDataAnalytics/Networking/Vpc/GlueEndpoint/SecurityGroup",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 443,
                    "ToPort": 443,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "from 10.0.0.0/16:443",
                            "CidrIp": "10.0.0.0/16"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-038ad92f07c7436de",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 443,
                    "ToPort": 443,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "HTTPS to VPC Endpoints",
                            "CidrIp": "10.0.0.0/16"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "Tags": [
                {
                    "Key": "aws:cloudformation:stack-id",
                    "Value": "arn:aws:cloudformation:ap-northeast-1:178625946981:stack/Dev-BLEAFsxnDataAnalytics/7cd9ba00-5f42-11f1-a545-0626e09db33f"
                },
                {
                    "Key": "aws:cloudformation:stack-name",
                    "Value": "Dev-BLEAFsxnDataAnalytics"
                },
                {
                    "Key": "Environment",
                    "Value": "Development"
                },
                {
                    "Key": "aws:cloudformation:logical-id",
                    "Value": "NetworkingGlueSecurityGroup714888AD"
                },
                {
                    "Key": "Repository",
                    "Value": "aws-samples/baseline-environment-on-aws"
                }
            ],
            "VpcId": "vpc-0809f5832b8d335e5",
            "SecurityGroupArn": "arn:aws:ec2:ap-northeast-1:178625946981:security-group/sg-038ad92f07c7436de",
            "OwnerId": "178625946981",
            "GroupName": "Dev-BLEAFsxnDataAnalytics-NetworkingGlueSecurityGroup714888AD-Ieg5w3z8ve8k",
            "Description": "Security group for AWS Glue Crawler",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [
                        {
                            "Description": "Self-referencing for Glue Spark",
                            "UserId": "178625946981",
                            "GroupId": "sg-038ad92f07c7436de"
                        }
                    ],
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-0ce6a8df8c7d5da73",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "icmp",
                    "FromPort": 252,
                    "ToPort": 86,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "Disallow all traffic",
                            "CidrIp": "255.255.255.255/32"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "Tags": [
                {
                    "Key": "Environment",
                    "Value": "Development"
                },
                {
                    "Key": "aws:cloudformation:stack-id",
                    "Value": "arn:aws:cloudformation:ap-northeast-1:178625946981:stack/Dev-BLEAFsxnDataAnalytics/7cd9ba00-5f42-11f1-a545-0626e09db33f"
                },
                {
                    "Key": "Repository",
                    "Value": "aws-samples/baseline-environment-on-aws"
                },
                {
                    "Key": "aws:cloudformation:stack-name",
                    "Value": "Dev-BLEAFsxnDataAnalytics"
                },
                {
                    "Key": "aws:cloudformation:logical-id",
                    "Value": "NetworkingFsxnSecurityGroup92491639"
                }
            ],
            "VpcId": "vpc-0809f5832b8d335e5",
            "SecurityGroupArn": "arn:aws:ec2:ap-northeast-1:178625946981:security-group/sg-0ce6a8df8c7d5da73",
            "OwnerId": "178625946981",
            "GroupName": "Dev-BLEAFsxnDataAnalytics-NetworkingFsxnSecurityGroup92491639-oHs6vO3Gqyxg",
            "Description": "Security group for FSx for NetApp ONTAP",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 635,
                    "ToPort": 635,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "NFS mountd",
                            "CidrIp": "10.0.0.0/16"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 3260,
                    "ToPort": 3260,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "iSCSI",
                            "CidrIp": "10.0.0.0/16"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 111,
                    "ToPort": 111,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "NFS portmapper",
                            "CidrIp": "10.0.0.0/16"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 443,
                    "ToPort": 443,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "ONTAP REST API",
                            "CidrIp": "10.0.0.0/16"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 445,
                    "ToPort": 445,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "SMB",
                            "CidrIp": "10.0.0.0/16"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 2049,
                    "ToPort": 2049,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "NFS",
                            "CidrIp": "10.0.0.0/16"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-0ef1661ddfcc1588f",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-0809f5832b8d335e5",
            "SecurityGroupArn": "arn:aws:ec2:ap-northeast-1:178625946981:security-group/sg-0ef1661ddfcc1588f",
            "OwnerId": "178625946981",
            "GroupName": "default",
            "Description": "default VPC security group",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [
                        {
                            "UserId": "178625946981",
                            "GroupId": "sg-0ef1661ddfcc1588f"
                        }
                    ],
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-03dcb5a3899edf63b",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "Allow all outbound traffic by default",
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "Dev-BLEAFsxnDataAnalytics/Networking/Vpc"
                },
                {
                    "Key": "Repository",
                    "Value": "aws-samples/baseline-environment-on-aws"
                },
                {
                    "Key": "Environment",
                    "Value": "Development"
                },
                {
                    "Key": "aws:cloudformation:logical-id",
                    "Value": "NetworkingVpcAthenaEndpointSecurityGroup4154C754"
                },
                {
                    "Key": "aws:cloudformation:stack-id",
                    "Value": "arn:aws:cloudformation:ap-northeast-1:178625946981:stack/Dev-BLEAFsxnDataAnalytics/7cd9ba00-5f42-11f1-a545-0626e09db33f"
                },
                {
                    "Key": "aws:cloudformation:stack-name",
                    "Value": "Dev-BLEAFsxnDataAnalytics"
                }
            ],
            "VpcId": "vpc-0809f5832b8d335e5",
            "SecurityGroupArn": "arn:aws:ec2:ap-northeast-1:178625946981:security-group/sg-03dcb5a3899edf63b",
            "OwnerId": "178625946981",
            "GroupName": "Dev-BLEAFsxnDataAnalytics-NetworkingVpcAthenaEndpointSecurityGroup4154C754-ZUlorlMPtOBu",
            "Description": "Dev-BLEAFsxnDataAnalytics/Networking/Vpc/AthenaEndpoint/SecurityGroup",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 443,
                    "ToPort": 443,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "from 10.0.0.0/16:443",
                            "CidrIp": "10.0.0.0/16"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        }
    ]
}
